--- a/assets/styles/components/_switch-button.scss
+++ b/assets/styles/components/_switch-button.scss
@@ -12,8 +12,8 @@
     outline: none;
     cursor: pointer;
     &.desktop_button {
-        right: 1.6rem;
-        top: 5rem;
+        right: 0.57rem;
+        top: 2rem
     }
     &.page_button {
         right: 1.6rem;
