--- a/assets/styles/front/_variables.scss
+++ b/assets/styles/front/_variables.scss
@@ -5,6 +5,7 @@
     --main-lightScroll: #000000;
     --shady: #3d3b3b;
     --gradient: #636363;
+    --accent-color: #003da7;
 }
 
 [theme=dark] {
@@ -14,4 +15,5 @@
     --main-lightScroll: #d4d3d3;
     --shady: #d1c8c8;
     --gradient: #7d7d7d;
+    --accent-color: #38a7e2;
 }
