--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -2,8 +2,8 @@
 
 {% block body %}
 
-    <div class="row row_main">
-        <div class="col s12">
+    <div class="body">
+        <section>
             {% include "blocks/components/svgs/_section-up.html.twig" %}
 
             {% include "blocks/components/_day-night-switch.html.twig" with {
@@ -11,18 +11,18 @@
                 class: 'desktop_button',
             } %}
 
-            <div id="competences" class="section scrollspy js-competence">
-                <div class="container">
-                <h6 class="competences ">ENV</h6>    
-                {% include "blocks/components/svgs/_brands_shuffle.html.twig" %}
-                </div>  
-            </div>
-
             <div id="portfolio" class="section scrollspy js-portfolio">
                 <div class="container">
                     <h6 class="competences ">PORTFOLIO</h6>
                     {% include "blocks/_project.html.twig" %}
                 </div>
+            </div>
+
+            <div id="competences" class="section scrollspy js-competence">
+                <div class="container">
+                <h6 class="competences ">ENV</h6>    
+                {% include "blocks/components/svgs/_brands_shuffle.html.twig" %}
+                </div>  
             </div>
 
             <div id="formations" class="section scrollspy js-education">
@@ -36,7 +36,7 @@
   
             {% include "blocks/_contact.html.twig" %}
             {% include "blocks/_footer.html.twig" %}
-        </div>
+        </section>
     </div>
     
 {% endblock %}
